# smartdoc

./: .gitignore  .vale.ini  .versionrc  CHANGELOG.md  Pipfile  README.md  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  sample_oas.json  sample_oas.yml
.github/ISSUE_TEMPLATE/: feature-consideration.md
.github/styles/base/: accessibility.yml  avoid.yml
.github/workflows/: docs-ci.yml
docs/: requirements-docs.txt
docs/source/: cli-reference.rst  conf.py  index.rst  installation.rst  metrics.rst  smartdoc_workflow.rst
docs/source/_static/: custom.css
docs/source/using/: analyze.rst  categories_and_metrics.rst  check.rst  fail-on.rst  focus.rst  summary.rst
src/analysis_engine/: __init__.py  llm_client.py  main.py  prompter.py
src/oas/: __init__.py  file_handler.py  oas_loader.py  yaml_loader.py
src/schemas/: __init__.py  description_analysis.py  examples_analysis.py  full_analysis.py  full_analysis_schema.py  issue.py  issue_schema.py  metadata.py  metric.py  metrics.py  naming_analysis.py  oas_schema.py  operations.py  parameters.py  recommendation.py  recommendation_schema.py  requests.py  responses.py  schemas.py
src/smartdoc/: analyze.py  check.py  cli.py  fail_on.py  metadata.py  serialize.py  summarize.py
src/smartdoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
